--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,76 @@
 @import "~normalize.css";
 
 @import "_variables";
-@import "modules/hello.scss";
+@import "modules/form.scss";
+@import "modules/heading.scss";
+@import "modules/article.scss";
+@import "modules/sender.scss";
+@import "modules/special.scss";
+
+
+:root {
+  --normal-padding:16px;
+  --small-padding:5px;
+}
+
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
 body {
-  background: $wtf;
-  color: #fff;
+  min-width: 100vw;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+.footer {
+  background: #cbf1f9;
+  background: linear-gradient(
+    132deg,
+    #cbf1f9 0%,
+    rgba(24, 111, 23, 0.650298) 42%,
+    #181515 100%
+  );
+  min-height: 100px;
+  min-width: 100vw;
+  margin-top: 20px;
+}
+
+h2 {
+  align-self: flex-start;
+}
+
+h3 {
+  margin-top: 0;
+  color: #660708;
+}
+
+.header {
+  background: #cbf1f9;
+  background: linear-gradient(
+    132deg,
+    #cbf1f9 0%,
+    rgba(24, 111, 23, 0.650298) 42%,
+    #181515 100%
+  );
+  min-height: 100px;
+  min-width: 100vw;
+}
+
+.main {
+  min-height: 100vh;
+  width: 90%;
+  margin: 0px;
+  @media screen and (min-width: 768px) {
+    width: 80%;
+  }
+}
+
+
