Reset button added

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "modules/article.scss";
 @import "modules/sender.scss";
 @import "modules/special.scss";
+@import "modules/reset.scss";
 
 @import url('https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@400;700&display=swap');
 
