--- a/src/scss/modules/article.scss
+++ b/src/scss/modules/article.scss
@@ -17,7 +17,7 @@
   }
   &__heading::before {
     content: "☆ ";
-    color: rgba(24, 111, 23, 0.650298);
+    color:#660708;
   }
   &__option {
     padding: var(--small-padding);
