--- a/src/scss/modules/reset.scss
+++ b/src/scss/modules/reset.scss
@@ -1,17 +1,17 @@
-.sender {
+.reset {
     display: flex;
     justify-content: flex-end;
     margin: 16px 0px;
-    grid-column-start: 2;
+    grid-column-start: 1;
     grid-row-start: 5;
     &__button {
       background: rgba(24, 111, 23, 0.650298);
       padding: var(--normal-padding);
       border: none;
       border-radius: 5px;
-      width: 90px;    
+      width: 90px;
       &:hover {
-      border: 2px solid rgba(20, 80, 19, 0.65);
-    }
+        border: 2px solid rgba(20, 80, 19, 0.65);
+      }
     }
   }
