--- a/src/scss/modules/heading.scss
+++ b/src/scss/modules/heading.scss
@@ -3,7 +3,16 @@
     flex-direction: column;
     align-items: center;
     &__name {
-      color: #081c15;
+      color:var(--text-color);
+      font-size: 30px;
+      font-weight:bold;
+      padding-top:var(--normal-padding);
+      margin:0;
+      color:var(--text-color);}
+    &__special {
+      font-family: "Qwitcher Grypen", cursive;
+      font-size: 40px;
+      font-weight: 400;
     }
     @media screen and (min-width: 768px) {
       &__content {
