--- a/src/scss/modules/reset.scss
+++ b/src/scss/modules/reset.scss
@@ -10,6 +10,7 @@
       border: none;
       border-radius: 5px;
       width: 90px;
+      color:var(--text-color);
       &:hover {
         border: 2px solid rgba(20, 80, 19, 0.65);
       }
