--- a/src/scss/modules/sender.scss
+++ b/src/scss/modules/sender.scss
@@ -5,6 +5,7 @@
     grid-column-start: 2;
     grid-row-start: 5;
     &__button {
+      margin-left:6px;
       background: rgba(24, 111, 23, 0.650298);
       padding: var(--normal-padding);
       border: none;
