--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -1,4 +1,5 @@
 .header {
+  font-size:13px;
   background: #cbf1f9;
   background: linear-gradient(
     132deg,
@@ -8,17 +9,15 @@
   );
   min-width: 100vw;
   &__date {
-    padding: var(--normal-padding);
     color: white;
     margin: 16px;
   }
   &__dark {
-    padding: var(--normal-padding);
     color: white;
     margin: 16px;
   }
   &__position {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
   }
 }
