Header&footer padding size change

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,7 +46,7 @@ body {
     rgba(24, 111, 23, 0.650298) 42%,
     #181515 100%
   );
-  padding: var(--normal-padding);
+  padding: 26px;
   min-width: 100vw;
   color: white;
   display: flex;
