--- a/src/scss/modules/special.scss
+++ b/src/scss/modules/special.scss
@@ -4,6 +4,9 @@
     &__button {
       display: block;
       margin-bottom: 5px;
+      width:20px;
+      height:20px;
+     
     }
     &__mark {
       display: block;
